--- a/views/index.html
+++ b/views/index.html
@@ -5,21 +5,39 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="static/app.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>{{.Title}}</title>
 </head>
-<body onload="getAll()">
-<h1>{{.Title}}</h1>
+<body onload="getAll()" style="margin-top: 20px">
+<div class="container">
+    <h1>{{.Title}}</h1>
 
-<label for="taskInput">
-    <h3>{{.CreateLabel}}</h3>
-</label>
-<input type="text" id="taskInput">
+    <label for="taskInput" class="form-label">
+        <p>{{.CreateLabel}}</p>
+    </label>
+    <div class="row">
+        <div class="col">
+            <input type="text" class="form-control" id="taskInput" placeholder="Task description">
+        </div>
+        <div class="col">
+            <input type="text" class="form-control" id="categoryInput" placeholder="Category">
+        </div>
+        <div class="col">
+            <button class="btn btn-primary mb-3" onclick="sendToDo()">Add ToDo</button>
+        </div>
 
-<button onclick="sendToDo()">Hello</button>
+        <ul id="taskList" class="list-group">
+        </ul>
 
-<ul id="taskList">
-</ul>
+    </div>
+</div>
 
-<script src="static/app.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous"></script>
+    <script src="static/app.js"></script>
 </body>
 </html>
